welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:37: error: expected class or object definition
def isFacingTrail():Boolean =
^SlugHunting:62: error: Unmatched closing brace '}' ignored here
}
^