welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() 
{
	
   while(!estSurBiscuit)
   {
    		if(isFacingTrail)
    		{
    		avance()
    		baisseBrosse()
    		leveBrosse()
    	     
   		 }

   			 if(estFaceMur)
   			 {
   		 	gauche()
   		 	avance()
   		 	droite()
   		 	
   		 	baisseBrosse()
   		 	leveBrosse()
   		 	
   			 }
   		 		if(!isFacingTrail)
   		 
   				 {
   				 	droite()
   				 }
  }
  
 
  }
   porteBiscuit()
   		
}
def isFacingTrail():Boolean =
{

	if(estFaceMur)
	{
	return false
	}

		else
		{
			avance()
			if(getCouleurSol()==Color.green)
			{
				recule()
				return true
				
			}
				else
				{
				recule()
				return false
				}
		}
}